Lots of front end updates. Adding bot typing indicator. Adjusted spacing throughout. Moved recipe buttons to separate component at bottom. Can click on shaded background to exit screen. Tweaked basket layouts.

--- a/RecipeSesameFrontEnd/src/components/CartScreen/CartContainer/CartContainer.css
+++ b/RecipeSesameFrontEnd/src/components/CartScreen/CartContainer/CartContainer.css
@@ -10,6 +10,11 @@
     background-color: var(--screen-shade);
 }
 
+.cartCard {
+    height: calc(90vh - 70px);
+    padding: 30px 0 40px;
+}
+
 .cartContent {
     background-color: var(--main-color);
     height: 90vh;
