--- a/RecipeSesameFrontEnd/src/components/HomeScreen/RecommendedRecipe/RecommendedRecipe.css
+++ b/RecipeSesameFrontEnd/src/components/HomeScreen/RecommendedRecipe/RecommendedRecipe.css
@@ -9,7 +9,7 @@
     box-shadow: var(--card-shadow);
     background-size: cover;
     transition-property: transform;
-    transition-duration: 0.25s;
+    transition-duration: 0.2s;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -20,7 +20,8 @@
 
 .recommendedRecipe:hover {
     cursor: pointer;
-    transform: scale(1.05);
+    transform: scale(1.03);
+    transition-timing-function: ease-in-out;
 }
 
 .recommendedRecipe > h3 {
