--- a/RecipeSesameFrontEnd/src/App.css
+++ b/RecipeSesameFrontEnd/src/App.css
@@ -67,6 +67,15 @@
   margin-bottom: 10px;
 }
 
+.shade {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+}
+
 .container {
   height: 84vh;
 }
