--- a/RecipeSesameFrontEnd/src/components/CartScreen/CartContents/CartContents.css
+++ b/RecipeSesameFrontEnd/src/components/CartScreen/CartContents/CartContents.css
@@ -1,6 +1,6 @@
 .cartContents {
-    width: calc(100% - 120px);
-    padding: 0 60px;
+    width: calc(100% - 80px);
+    padding: 0 40px;
     height: 100vh;
     margin-top: 12px;
 }
@@ -9,20 +9,35 @@
     overflow: scroll;
     background-color: var(--main-color-light);
     border-radius: 0 var(--small-radius) var(--small-radius) var(--small-radius);
-    height: 58vh;
+    height: 61vh;
     width: 100%;
     padding: 10px 0;
 }
 
+.taller {
+    height: 65vh;
+}
+
+.empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
 .printButton {
-    background-color: var(--main-color-light);
-    border: 1px solid rgb(162, 216, 187);
-    padding: 0 20px;
-    margin: 8px 0;
-    height: 40px;
-    border-radius: 20px;
+    background-color: var(--off-white);
+    box-shadow: var(--card-shadow-light);
+    padding: 8px 15px;
+    margin: 15px 0;
+    border-radius: var(--large-radius);
+    font-weight: bold;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     float: right;
+}
+
+.printButton:hover {
+    cursor: pointer;
 }
