--- a/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeContainer/RecipeContainer.css
+++ b/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeContainer/RecipeContainer.css
@@ -10,11 +10,23 @@
     background-color: var(--screen-shade);
 }
 
+.recipeMain {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .screenCard {
     background-color: var(--main-color);
-    height: calc(90vh - 90px);
+    height: calc(93vh - 40px);
     width: 65%;
-    padding: 30px 0 60px;
+    padding: 20px 0;
     border-radius: var(--large-radius);
     box-shadow: var(--screen-shadow);
     display: flex;
@@ -22,6 +34,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     overflow: hidden;
+    z-index: 10;
 }
 
 @media only screen and (max-width: 500px) {
@@ -34,6 +47,7 @@
 
 .recipeCard {
     width: 90%;
+    align-items: flex-end;
 }
 
 .recipeContent {
@@ -41,7 +55,14 @@
     justify-content: space-between;
     overflow: scroll;
     height: 100vh;
-    padding: 12px 60px 0;
+    padding: 8px 40px 0;
+}
+
+.recipeButtons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 40px 0 0;
 }
 
 @media only screen and (max-width: 500px) {
