--- a/RecipeSesameFrontEnd/src/App.css
+++ b/RecipeSesameFrontEnd/src/App.css
@@ -80,6 +80,10 @@
   height: 84vh;
 }
 
+.container > h2:hover {
+  cursor: default;
+}
+
 @media only screen and (min-width: 1000px) {
   .mainContainer {
     flex-direction: row;
