--- a/RecipeSesameFrontEnd/src/components/CartScreen/CartItem/CartItem.css
+++ b/RecipeSesameFrontEnd/src/components/CartScreen/CartItem/CartItem.css
@@ -6,6 +6,7 @@
     align-items: center;
     border-top: 1px solid var(--main-color-dark);
     font-weight: bold;
+    position: relative;
 }
 
 .cartItem:first-of-type {
@@ -17,6 +18,10 @@
 }
 
 .cartItem:hover {
+    cursor: default;
+}
+
+.recipeItem:hover {
     cursor: pointer;
 }
 
@@ -36,10 +41,20 @@
 
 .cartItem > svg:hover {
     color:var(--warning-color-dark);
+    cursor: pointer;
 }
 
 .cartIngredient {
     text-align: left;
+}
+
+.click {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
 }
 
 .delete {
