--- a/RecipeSesameFrontEnd/src/components/HomeScreen/Logo/Logo.css
+++ b/RecipeSesameFrontEnd/src/components/HomeScreen/Logo/Logo.css
@@ -8,6 +8,10 @@
     font-size: 32pt;
 }
 
+.logo:hover {
+  cursor: default;
+}
+
 @media only screen and (min-width: 1000px) {
 
     .logo > h1 {
