--- a/RecipeSesameFrontEnd/src/components/CartScreen/CartItem/CartItem.css
+++ b/RecipeSesameFrontEnd/src/components/CartScreen/CartItem/CartItem.css
@@ -31,7 +31,7 @@
 
 .cartItem > img {
     border-radius: 6px;
-    height: 90px;
+    height: 75px;
     box-shadow: var(--card-shadow);
 }
 
@@ -53,7 +53,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: 1;
 }
 
