--- a/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeContainer/RecipeContainer.css
+++ b/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeContainer/RecipeContainer.css
@@ -47,7 +47,7 @@
 
 .recipeCard {
     width: 90%;
-    align-items: flex-end;
+    align-items: center;
 }
 
 .recipeContent {
@@ -62,7 +62,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 15px 40px 0 0;
+    margin: 15px 0 0 0;
 }
 
 @media only screen and (max-width: 500px) {
