--- a/RecipeSesameFrontEnd/src/cssVariables.css
+++ b/RecipeSesameFrontEnd/src/cssVariables.css
@@ -19,4 +19,5 @@
   --list-shadow: inset 0px 0px 4px #7ca58f;
   --screen-shadow: 0px 0px 8px rgb(36, 53, 44);
   --screen-shade: rgba(49, 71, 58, 0.9);
+  --active-button: rgb(245, 245, 245);
 }
