--- a/RecipeSesameFrontEnd/src/App.css
+++ b/RecipeSesameFrontEnd/src/App.css
@@ -13,7 +13,11 @@
   align-items: center;
   height: 10vh;
   padding-bottom: 2vh;
-  border-bottom: 1px solid var(--main-color-dark);
+  border-bottom: 2px solid var(--main-color-dark);
+}
+
+.headerButtons {
+  display: flex;
 }
 
 @media only screen and (max-width: 500px) {
@@ -56,7 +60,7 @@
   flex-direction: column;
   width: 100%;
   min-width: 0;
-  height: 84vh;
+  height: 75vh;
 }
 
 .chatContainer {
@@ -77,7 +81,7 @@
 }
 
 .container {
-  height: 84vh;
+  height: 75vh;
 }
 
 .container > h2:hover {
