--- a/RecipeSesameFrontEnd/src/components/CartScreen/CartItem/CartItem.css
+++ b/RecipeSesameFrontEnd/src/components/CartScreen/CartItem/CartItem.css
@@ -1,6 +1,6 @@
 .cartItem {
-    padding: 10px 15px 10px 0;
-    margin: 0 30px;
+    padding: 10px 10px 10px 0;
+    margin: 0 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -14,7 +14,9 @@
 }
 
 .recipeItem {
-    padding: 15px 12px 15px 8px;
+    padding: 15px 18px 15px 15px;
+    transition-property: background-color;
+    transition-duration: 0.2s;
 }
 
 .cartItem:hover {
@@ -26,7 +28,7 @@
 }
 
 .cartItem > p {
-    padding: 0 15px;
+    padding: 0 10px;
 }
 
 .cartItem > img {
@@ -55,6 +57,18 @@
     width: 100%;
     height: 100%;
     z-index: 1;
+}
+
+.recipeItem:first-of-type {
+    border-radius: var(--large-radius) var(--large-radius) 0 0;
+}
+
+.recipeItem:last-of-type {
+    border-radius: 0 0 var(--large-radius) var(--large-radius);
+}
+
+.recipeItem:hover {
+    background-color: rgb(189, 243, 214);
 }
 
 .delete {
