--- a/RecipeSesameFrontEnd/src/components/HomeScreen/CartButton/CartButton.css
+++ b/RecipeSesameFrontEnd/src/components/HomeScreen/CartButton/CartButton.css
@@ -3,15 +3,15 @@
     justify-content: center;
     align-items: center;
     background-color: var(--active-button);
-    padding: 0 14px 0 15px;
+    padding: 0 14px 0 14px;
     height: 36px;
     border-radius: var(--large-radius);
-    box-shadow: var(--card-shadow-light);
-}
-
-.cartBtn > p {
-    margin-right: 9px;
-    font-weight: bold;
+    box-shadow: var(--button-shadow);
+    color: var(--active-buton-text);
+    transition-property: transform;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-out;
+    margin-left: 6px;
 }
 
 .cartBtn > svg {
@@ -20,4 +20,5 @@
 
 .cartBtn:hover {
     cursor: pointer;
+    transform: scale(1.02);
 }
