--- a/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeCartContainer/RecipeCartContainer.css
+++ b/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeCartContainer/RecipeCartContainer.css
@@ -1,3 +1,8 @@
 .recipeCart {
     width: 100%;
+    overflow-y: scroll;
+    background-color: var(--main-color-light);
+    box-shadow: var(--card-shadow-light);
+    border-radius: var(--small-radius);
+    margin-top: 8px;
 }
