--- a/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeHeader/RecipeHeader.css
+++ b/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeHeader/RecipeHeader.css
@@ -3,8 +3,9 @@
     justify-content: space-between;
     align-items: center;
     width: calc(100% - 80px);
-    margin-bottom: 8px;
-    padding: 0 40px;
+    margin-bottom: 0px;
+    padding: 5px 0 10px;
+    border-bottom: 2px solid var(--main-color-dark);
 }
 
 .cardHeader > svg {
