--- a/RecipeSesameFrontEnd/src/components/CartScreen/ListSelector/ListSelector.css
+++ b/RecipeSesameFrontEnd/src/components/CartScreen/ListSelector/ListSelector.css
@@ -3,21 +3,21 @@
     justify-content: flex-start;
     margin-bottom: 0;
     align-self: flex-start;
+    border-bottom: 2px solid var(--main-color-dark);
 }
 
 .selected {
-    background-color: var(--main-color-light);
+    background-color: var(--main-color-dark);
 }
 
 .unselected {
-    background-color: var(--main-color-dark);
     transition-property: background-color;
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
 }
 
 .unselected:hover {
-    background-color: rgb(166, 226, 195);
+    background-color: rgb(172, 231, 201);
 }
 
 .listSelector > p {
@@ -28,7 +28,6 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
-    box-shadow: 0 -3px 5px -6px #69aa8a;
 }
 
 .listSelector > p:hover {
