--- a/RecipeSesameFrontEnd/src/components/CartScreen/QuantityAdjuster/QuantityAdjuster.css
+++ b/RecipeSesameFrontEnd/src/components/CartScreen/QuantityAdjuster/QuantityAdjuster.css
@@ -1,8 +1,8 @@
 .quantityAdjuster {
     background-color: var(--active-button);
-    width: 75px;
+    width: auto !important;
     height: 22px;
-    padding: 5px 43px 5px 6px;
+    padding: 5px 7px 5px 7px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,6 +18,18 @@
     transform: scale(1.02);
 }
 
+.quantity > input {
+    margin: 0;
+}
+
 .quantityArrows {
     border-right: none;
+}
+
+.quantityArrows > svg:first-of-type {
+    margin: 0 12px 0 8px !important;
+}
+
+.quantityArrows > svg:last-of-type {
+    margin: 0 8px 0 12px !important;
 }
