--- a/RecipeSesameFrontEnd/src/components/HomeScreen/Message/Message.css
+++ b/RecipeSesameFrontEnd/src/components/HomeScreen/Message/Message.css
@@ -1,11 +1,12 @@
 .message {
     padding: 10px 13px;
-    margin: 4px 0;
+    margin: 3px 0;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     word-break: break-word;
     box-shadow: var(--card-shadow-light);
+    border-radius: var(--small-radius);
 }
 
 .message:last-of-type {
@@ -21,34 +22,13 @@
 }
 
 .leftMessage {
-    border-radius: var(--large-radius) var(--large-radius) var(--large-radius) 3px;
     background-color: rgb(80, 80, 80);
     color: var(--off-white);
-    width: 50%;
-}
-
-.firstLeft {
-    border-radius: 3px 3px var(--large-radius) 3px;
-}
-
-.lastLeft {
-    border-radius: var(--large-radius) var(--large-radius) 3px 3px;
-    margin-bottom: 1px;
+    margin-right: auto;
 }
 
 .rightMessage {
-    border-radius: var(--large-radius) var(--large-radius) 3px var(--large-radius);
     background-color: var(--secondary-color);
     color: var(--black-text);
-    width: 50%;
     margin-left: auto;
-}
-
-.firstRight {
-    border-radius: 3px 3px 3px var(--large-radius);
-}
-
-.lastRight {
-    border-radius: var(--large-radius) var(--large-radius) 3px 3px;
-    margin-bottom: 1px;
 }
