--- a/RecipeSesameFrontEnd/src/components/HomeScreen/RecommendedRecipe/RecommendedRecipe.css
+++ b/RecipeSesameFrontEnd/src/components/HomeScreen/RecommendedRecipe/RecommendedRecipe.css
@@ -26,7 +26,7 @@
 
 .recommendedRecipe > h3 {
     color: var(--off-white);
-    text-shadow: 1px 0 2px rgb(50, 50, 50)
+    text-shadow: 0 0 3px rgb(50, 50, 50)
 }
 
 .recommendedRecipe > img {
