--- a/RecipeSesameFrontEnd/src/components/HomeScreen/Logo/Logo.css
+++ b/RecipeSesameFrontEnd/src/components/HomeScreen/Logo/Logo.css
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 500px) {
     .logo {
       max-width: 50%;
+      margin-bottom: 15px;
     }
   }
 
@@ -13,7 +14,6 @@
 }
 
 @media only screen and (min-width: 1000px) {
-
     .logo > h1 {
       font-size: 40pt;
   }
