--- a/RecipeSesameFrontEnd/src/components/HomeScreen/Message/Message.css
+++ b/RecipeSesameFrontEnd/src/components/HomeScreen/Message/Message.css
@@ -6,7 +6,6 @@
     align-items: center;
     word-break: break-word;
     box-shadow: var(--card-shadow-light);
-    border-radius: var(--small-radius);
 }
 
 .message:last-of-type {
@@ -25,10 +24,12 @@
     background-color: rgb(80, 80, 80);
     color: var(--off-white);
     margin-right: auto;
+    border-radius: var(--large-radius) var(--large-radius) var(--large-radius) 3px;
 }
 
 .rightMessage {
     background-color: var(--secondary-color);
     color: var(--black-text);
     margin-left: auto;
+    border-radius: var(--large-radius) var(--large-radius) 3px var(--large-radius);
 }
