--- a/RecipeSesameFrontEnd/src/App.css
+++ b/RecipeSesameFrontEnd/src/App.css
@@ -20,6 +20,10 @@
   display: flex;
 }
 
+.accountBtn {
+  display: none !important;
+}
+
 @media only screen and (max-width: 500px) {
   .App {
    justify-content: flex-start;
